fixed rest of SonarCloud